Missing double quote

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/oem_database_passwords.yml
@@ -37,7 +37,7 @@
       include_tasks: rotate_oem_database_passwords.yml
       vars:
         oem_db_name: "{{ database_name }}"
-        secret_name: /oracle/database/{{ database_name }}/passwords"
+        secret_name: "/oracle/database/{{ database_name }}/passwords"
       loop:
         - "{{ db_configs['RCVCAT']['rcvcat_db_name'] }}"
         - "{{ db_configs['EMREP']['emrepo_db_name'] }}"
