--- a/playbooks/oem_blackout/oem-blackout/defaults/main.yml
+++ b/playbooks/oem_blackout/oem-blackout/defaults/main.yml
@@ -1,4 +1,4 @@
-emcli: /u01/app/oracle/product/emcli/emcli
+emcli: "{{ '/u01/app/oracle/product/emcli/emcli' if (inventory_hostname is not search('oem')) else '/u01/app/oracle/product/mw135/bin/emcli' }}"
 emcli_java_location: /u01/app/oracle/product/oem-agent/agent_{{ OEM_AGENT_VERSION }}/oracle_common/jdk/jre/bin
 oem_secretsmanager_passwords:
   emrep:
