--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/rotate_oem_passwords.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/rotate_oem_passwords.yml
@@ -4,8 +4,14 @@
   no_log: true
 
 - name: Get Existing SYS Password
+  import_role:
+    name: secretsmanager-passwords
+  vars:
+    secretsmanager_passwords: "{{ oemdb_secretsmanager_passwords }}"
+
+- name: Set Variable For SYS Password
   set_fact:
-    sys_password: "{{ lookup('amazon.aws.aws_secret', '{{ secret_name }}', region='eu-west-2') | from_json | json_query('sys') }}"
+    sys_password: "{{ secretsmanager_passwords_dict['oemdb'].passwords['sys'] }}"
 
 - name: Check if the SYS Password Works
   script: get_sys_remote_lock.sh
@@ -15,7 +21,7 @@
   run_once: true
   environment:
     DB_NAME: "{{ db_configs['EMREP']['emrepo_db_name'] }}"
-    SECRET_ID: "{{ oem_secretsmanager_passwords['oem']['secret'] }}"
+    SECRET_ID: "{{ oemdb_secretsmanager_passwords['oemdb']['secret'] }}"
 
 - name: Abort if SYS Connection Fails
   fail:
@@ -86,6 +92,8 @@
       when: not oms_status.stdout_lines[-1] == 'Up'
       vars:
         ansible_aws_ssm_timeout: 900
+
+        
 # - name: Create New Password for Nodemanager
 #   include: ../../all_password_rotation/tasks/create_random_password.yml
 
