--- a/playbooks/oracle_restore_points/playbook.yml
+++ b/playbooks/oracle_restore_points/playbook.yml
@@ -68,15 +68,15 @@
             - ( get_fast_start_failover.stdout | trim ) not in ['','Disabled']
 
 # Allow OEM jobs to run during the flashback so we can pick up Audited Interaction Data for archival if required
-# - name: Start Blackout for Flashback
-#   import_playbook: ../oem-blackout/playbook.yml
-#   when: required_action == "Flashback to Restore Point"
-#   vars:
-#       target: "{{ target_dbs }}"
-#       blackout: "Flashback_to_{{ restore_point_name }}"
-#       object_type: all
-#       action: start
-#       allow_jobs: true
+- name: Start Blackout for Flashback
+  import_playbook: ../oem_blackout/playbook.yml
+  when: required_action == "Flashback to Restore Point"
+  vars:
+      target: "{{ target_dbs }}"
+      blackout: "Flashback_to_{{ restore_point_name }}"
+      object_type: all
+      action: start
+      allow_jobs: true
 
 # Ensure all connections to Delius Primary are blocked and removed
 # prior to a Flashback
@@ -445,14 +445,14 @@
     - database_primary_sid is defined
     - database_primary_sid | regex_search('STGMIS')
 
-# - name: Stop Blackout for Flashback
-#   import_playbook: ../oem-blackout/playbook.yml
-#   when: required_action == "Flashback to Restore Point"
-#   vars:
-#       target: "{{ target_dbs }}"
-#       blackout: "Flashback_to_{{ restore_point_name }}"
-#       object_type: all
-#       action: stop
+- name: Stop Blackout for Flashback
+  import_playbook: ../oem-blackout/playbook.yml
+  when: required_action == "Flashback to Restore Point"
+  vars:
+      target: "{{ target_dbs }}"
+      blackout: "Flashback_to_{{ restore_point_name }}"
+      object_type: all
+      action: stop
 
 # Always Run the Restore Point Report at the End
 - name: Report restore points
