--- a/playbooks/oracle_password_rotation/oem_password_rotation.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation.yml
@@ -4,4 +4,4 @@
   become: yes
   become_user: oracle
   roles:
-    - { role: oem_password_rotation, when: environment_name is defined ) }
+    - { role: oem_password_rotation, when: environment_name is defined }
