--- a/.github/workflows/ldap-add-roles-to-users.yml
+++ b/.github/workflows/ldap-add-roles-to-users.yml
@@ -7,11 +7,13 @@ on:
             type: choice
             options:
               - "dev"
+              - "test"
         # Example: username1,role1;role2;role3|username2,role1;role2
         user-role-list:
             required: true
             type: string
-            
+  workflow_call:
+    
 jobs:
     deploy:
         name: Create ECS Task in delius-core ${{ github.event.inputs.environment }}
