--- a/.github/workflows/ldap-add-roles-to-users.yml
+++ b/.github/workflows/ldap-add-roles-to-users.yml
@@ -48,8 +48,9 @@ jobs:
                 # Multi-line string containing key/value pairs of JSON property paths and desired property values
                 field-value-pairs: |
                     $.containerDefinitions[0].command: ["ldap-automation", "add-roles-to-users", "${{ github.event.inputs.user-role-list }}"]
-                    $.executionRoleArn: "arn:aws:iam::${{vars.AWS_ACCOUNT_ID}}:role/${{ github.event.inputs.environment }}-ldap-task-exec"
-                    $.taskRoleArn: "arn:aws:iam::${{vars.AWS_ACCOUNT_ID}}:role/${{ github.event.inputs.environment }}-ldap-task"
+                  
+                    $.executionRoleArn: "arn:aws:iam::${{vars.AWS_ACCOUNT_ID}}:role/${{ github.event.inputs.environment }}-ldap-ecs-task-exec"
+                    $.taskRoleArn: "arn:aws:iam::${{vars.AWS_ACCOUNT_ID}}:role/${{ github.event.inputs.environment }}-ldap-ecs-task"
 
                     $.containerDefinitions[0].image: "ghcr.io/ministryofjustice/hmpps-ldap-automation:${{ vars.LDAP_AUTOMATION_IMAGE_TAG }}"
 
