--- a/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/modify_metric_thresholds.yml
+++ b/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/modify_metric_thresholds.yml
@@ -8,9 +8,9 @@
         dest: "{{ stage }}/emcli_login.sh"
         mode: "0700"
 
-    - name: Combine All Metrics with Host Specific Metrics
-      set_fact:
-         combined_oem_metrics: "{{ all_oem_metrics | combine(host_oem_metrics) }}"
+    - name: All OEM Metrics
+      debug:
+        var: all_oem_metrics
 
     - name: List All Metric Thresholds
       debug:
@@ -40,11 +40,36 @@
       debug:
          msg: "{{ oem_targets | selectattr('target_type','equalto','oracle_database') | list }}"
 
-    - name: What
+    - name: Show All Metrics
       debug:
-         msg: "{{ item.key }}"
-      loop: "{{ host_oem_metrics | dict2items }}"
+         msg: "{{ (( all_oem_metrics | flatten_metrics ) + ( host_oem_metrics | flatten_metrics )) | rejectattr('target_name','equalto','custom_properties') | list }}"
 
+
+
+    - name: Custom Properties to be Set
+      debug:
+        msg: "{{ item.0.target_name }} {{ item.0.target_type }} --> {{ item.1.target_name }} {{ item.1.target_type }}"
+      loop:
+        "{{ oem_targets | product((( all_oem_metrics | flatten_custom_properties ) + ( host_oem_metrics | flatten_custom_properties )) | rejectattr('target_name','equalto','input_file') | list ) }}"
+      when:
+        - item.0.target_type == item.1.target_type
+        - (item.0.target_name == item.1.target_name) or (item.1.target_name == 'all')
+
+
+    # - name: Set Metric
+    #   set_fact:
+    #      list_of_metrics: "{{ ( list_of_metrics | default([]) ) + { 'target_type': item.key, 'target_name': item.value.key, 'input_file': item.value.input_file } }}"
+    #   loop:
+
+
+    - name: Metric Thresholds to be Set
+      debug:
+        msg: "{{ item.0.target_name }} {{ item.0.target_type }} --> {{ item.1.target_name }} {{ item.1.target_type }}"
+      loop:
+        "{{ oem_targets | product((( all_oem_metrics | flatten_metrics ) + ( host_oem_metrics | flatten_metrics )) | rejectattr('target_name','equalto','custom_properties') | list ) }}"
+      when:
+        - item.0.target_type == item.1.target_type
+        - (item.0.target_name == item.1.target_name) or (item.1.target_name == 'all')
 
     # - name: Modify Metric Thresholds
     #   shell: |
@@ -55,4 +80,45 @@
     #   when:
     #       item.0.target_type = item.1.key
 
-         
+    - name: Metric Thresholds to be Set
+      shell: |
+              . {{ stage }}/emcli_login.sh
+              cat <<-EOINPUT > {{ stage }}/oem_threshold.txt
+              {{ item.1.input_file }}
+              EOINPUT
+              echo "Setting thresholds for {{ item.1.target_type }} {{ item.0.target_name }}"
+              {{ emcli }} modify_threshold -target_name={{ item.0.target_name }} -target_type={{ item.1.target_type }} \
+                    -input_file="FILE:{{ stage }}/oem_threshold.txt"
+      loop:
+        "{{ oem_targets | product((( all_oem_metrics | flatten_metrics ) + ( host_oem_metrics | flatten_metrics )) | rejectattr('target_name','equalto','custom_properties') | list ) }}"
+      when:
+        - item.0.target_type == item.1.target_type
+        - (item.0.target_name == item.1.target_name) or (item.1.target_name == 'all')
+      register: set_metric_thresholds
+
+    - debug:
+        var: set_metric_thresholds
+
+    - name: Setup Database Credentials
+      include_tasks: configure_database_credentials.yml
+
+    - name: Set Alert Log Filter Expressions
+      include_tasks: set_alert_log_filter_expression.yml
+      loop:
+        "{{ oem_targets | product((( all_oem_metrics | flatten_custom_properties ) + ( host_oem_metrics | flatten_custom_properties )) | rejectattr('property_value','none') | list ) }}"
+      when:
+        - item.0.target_type == 'oracle_database'
+        - item.0.target_type == item.1.target_type
+        - (item.0.target_name == item.1.target_name) or (item.1.target_name == 'all')
+      register: set_alert_log_filter_expressions
+      vars:
+         filter_expression: "{{ item.1.property_value }}"
+         database_target_name: "{{ item.0.target_name }}"
+
+
+  # always:
+
+  #     - name: Remove Threshold File from Stage Area
+  #       file:
+  #          path: "{{ stage }}/oem_threshold.txt"
+  #          state: absent
