--- a/playbooks/oracle_backup/backup.yml
+++ b/playbooks/oracle_backup/backup.yml
@@ -143,6 +143,10 @@
           shell: "{{ rman_command }}"
           async: "{{ allowable_duration|default(28800) }}"
           poll: 60
+          environment:
+            ASSUME_ROLE_NAME: "{{ secretsmanager_passwords['catalog'].assume_role_name }}"
+            SECRET_ACCOUNT_ID: "{{ account_ids[secretsmanager_passwords['catalog'].account_name] }}"
+            SECRET: "{{ secretsmanager_passwords['catalog'].secret }}"
           register: backup_cmd_output
 
       rescue:
