--- a/playbooks/oracle_backup/backup.yml
+++ b/playbooks/oracle_backup/backup.yml
@@ -144,9 +144,9 @@
           async: "{{ allowable_duration|default(28800) }}"
           poll: 60
           environment:
-            ASSUME_ROLE_NAME: "{{ secretsmanager_passwords['catalog'].assume_role_name }}"
-            SECRET_ACCOUNT_ID: "{{ account_ids[secretsmanager_passwords['catalog'].account_name] }}"
-            SECRET: "{{ secretsmanager_passwords['catalog'].secret }}"
+            ASSUME_ROLE_NAME: "{{ secretsmanager_passwords['catalog'].assume_role_name | default() }}"
+            SECRET_ACCOUNT_ID: "{{ account_ids[secretsmanager_passwords['catalog'].account_name] | default() }}"
+            SECRET: "{{ secretsmanager_passwords['catalog'].secret | default() }}"
           register: backup_cmd_output
 
       rescue:
