--- a/.github/workflows/oracle-db-oem-metrics-setup.yml
+++ b/.github/workflows/oracle-db-oem-metrics-setup.yml
@@ -1,6 +1,8 @@
-name: "Oracle: OEM Rules Setup"
-run-name: "Oracle: ${{ format('{0}', github.event.inputs.TargetEnvironment) }}_oem_rules_setup"
+name: "Oracle: OEM Metrics Setup"
+run-name: "Oracle: ${{ format('{0}', github.event.inputs.TargetEnvironment) }}_oem_metrics_setup"
 on:
+  push:
+    - "DBA-598-METRICS"
   workflow_dispatch:
     inputs:
       TargetEnvironment:
@@ -14,11 +16,6 @@ on:
           - "delius-core-stage"
           - "delius-core-pre-prod"
           - "delius-core-prod"
-      ReplaceExistingRuleSet:
-        description: "Replace Existing Rule Set if it Exists?"
-        type: boolean
-        required: true
-        default: 'false'
       VerboseOutput:
         description: "Verbose Output level"
         type: choice
@@ -55,7 +52,7 @@ jobs:
         id: preparetargetname
         run: echo TargetHost="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_delius_primarydb" >> $GITHUB_OUTPUT
   deployment:
-    name: oracle-db-oem-rules-setup
+    name: oracle-db-oem-metrics-setup
     needs: build_target_name
     environment: ${{ github.event.inputs.TargetEnvironment }}
     runs-on: ubuntu-latest
@@ -63,7 +60,7 @@ jobs:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
     timeout-minutes: 1440
     env:
-      command: ansible-playbook operations/playbooks/delius_oem_rules_setup/playbook.yml
+      command: ansible-playbook operations/playbooks/delius_oem_metrics_setup/playbook.yml
       inventory: inventory/ansible
     continue-on-error: false
     steps:
@@ -75,7 +72,7 @@ jobs:
           sparse-checkout-cone-mode: false
           sparse-checkout: |
             playbooks/ansible.cfg
-            playbooks/delius_oem_rules_setup
+            playbooks/delius_oem_metrics_setup
           path: operations
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
@@ -113,9 +110,9 @@ jobs:
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
           aws-region: "eu-west-2"
 
-      - name: Start OEM Rules Setup
+      - name: Start OEM Metrics Setup
         run: | 
             export ANSIBLE_CONFIG=$ansible_config
             # Link the checked out configuration roles to somewhere Ansible will be able to find them
-            ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/delius_oem_rules_setup/roles
-            $command -i $inventory -e target=${{needs.build_target_name.outputs.TargetHost}} -e replace_existing_rule_set=${{ github.event.inputs.ReplaceExistingRuleSet }} ${{ github.event.inputs.VerboseOutput }}
+            ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/delius_oem_metrics_setup/roles
+            $command -i $inventory -e target=${{needs.build_target_name.outputs.TargetHost}} ${{ github.event.inputs.VerboseOutput }}
