--- a/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/main.yml
+++ b/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/main.yml
@@ -1,10 +1,6 @@
 ---
-# - name: Get SYSMAN Password
-#   import_tasks: "{{ playbook_dir }}/../../common/tasks/get_facts.yml"
-
-- name: DEV ONLY TO SPEED UP
-  set_fact:
-     oem_sysman_password: W7eb1P7BO_agV64
+- name: Get SYSMAN Password
+  import_tasks: "{{ playbook_dir }}/../../common/tasks/get_facts.yml"
 
 - name: Modify Metric Thresholds
   import_tasks: modify_metric_thresholds.yml
