Checkout common files

--- a/.github/workflows/oracle-db-oem-metrics-setup.yml
+++ b/.github/workflows/oracle-db-oem-metrics-setup.yml
@@ -88,6 +88,7 @@ jobs:
           sparse-checkout: |
             playbooks/ansible.cfg
             playbooks/delius_oem_metrics_setup
+            common
           path: operations
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
