--- a/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/main.yml
+++ b/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
+
+- debug:
+    var: "{{ playbook_dir }}"
+
+- debug:
+    var: "{{ playbook_dir }}/../../common/tasks/get_facts.yml"
+
 - name: Get SYSMAN Password
   import_tasks: "{{ playbook_dir }}/../../common/tasks/get_facts.yml"
 
