Get references in GitHub Actions

--- a/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/main.yml
+++ b/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/main.yml
@@ -1,9 +1,11 @@
 ---
 
-- debug:
+- name: Show Playbook Directory
+  debug:
     var: "{{ playbook_dir }}"
 
-- debug:
+- name: Show Facts Directory
+  debug:
     var: "{{ playbook_dir }}/../../common/tasks/get_facts.yml"
 
 - name: Get SYSMAN Password
