--- a/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/main.yml
+++ b/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/main.yml
@@ -2,11 +2,11 @@
 
 - name: Show Playbook Directory
   debug:
-    var: "{{ playbook_dir }}"
+    var: playbook_dir
 
 - name: Show Facts Directory
   debug:
-    var: "{{ playbook_dir }}/../../common/tasks/get_facts.yml"
+    msg: "{{ playbook_dir }}/../../common/tasks/get_facts.yml"
 
 - name: Get SYSMAN Password
   include_tasks: "{{ playbook_dir }}/../../common/tasks/get_facts.yml"
