--- a/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/main.yml
+++ b/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/main.yml
@@ -8,9 +8,17 @@
   debug:
     msg: "{{ playbook_dir }}/../../common/tasks/get_facts.yml"
 
+- name: Show What is There
+  shell: |
+         find { playbook_dir }}/../../common/
+  register: what_is_it
+
+- debug:
+    var: what_is_it
+
 - name: Get SYSMAN Password
   include_tasks: "{{ playbook_dir }}/../../common/tasks/get_facts.yml"
-
+ 
 - name: Modify Metric Thresholds
   import_tasks: modify_metric_thresholds.yml
   when: (all_oem_metrics is defined) or (host_oem_metrics is defined)
