--- a/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/main.yml
+++ b/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/main.yml
@@ -10,7 +10,7 @@
 
 - name: Show What is There
   shell: |
-         find { playbook_dir }}/../../common/
+         find {{ playbook_dir }}/../../common/
   register: what_is_it
 
 - debug:
