--- a/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/main.yml
+++ b/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/main.yml
@@ -12,6 +12,7 @@
   shell: |
          find {{ playbook_dir }}/../../common/
   register: what_is_it
+  delegate_to: localhost
   become: false
 
 - debug:
