--- a/playbooks/oracle_backup/delete_defunct_backups.yml
+++ b/playbooks/oracle_backup/delete_defunct_backups.yml
@@ -39,7 +39,12 @@
 - name: Unregister DBID if Needed
   block:
     - name: Unregister from RMAN Catalog
-      script: unregister_dbid.sh "{{ defunct_dbid }}" "{{ connect_to_catalog }}"
+      script: unregister_dbid.sh "{{ defunct_dbid }}"
+      environment:
+        CATALOG: "{{ catalog }}"
+        ASSUME_ROLE_NAME: "{{ assume_role_name }}"
+        SECRET_ACCOUNT_ID: "{{ secret_account_id }}"
+        SECRET: "{{ secret }}"
       register: unregister
 
     - name: Show Unregister
@@ -56,7 +61,7 @@
 # second day finding nothing new to delete.   Do not send a notification if nothing has been deleted.
 - name: Send notification message via Slack all options
   community.general.slack:
-    token: "{{ getslacktoken.stdout }}"
+    token: "{{ getslacktoken }}"
     msg: "{{ notification_msg }}"
     channel: "{{ slack_channel }}"
     username: "Defunct Backup Deletion on {{ inventory_hostname }}"
